build: upgrade Spring Boot 3.4.3 → 3.5.13 and enforce SB3 best practices
Applied SpringBoot3BestPracticesOnly recipe via OpenRewrite across all services and libs:
- NoRepoAnnotationOnRepoInterface: removed redundant @Repository from JDBC repository interfaces
- BeanMethodsNotPublic: removed public modifier from all @Bean methods
- PreciseBeanType: narrowed @Bean return types from interface to concrete class

Upgraded dependencies:
- spring-boot-starter-parent 3.4.3 → 3.5.13 (via UpgradeSpringBoot_3_5 recipe)
- springdoc-openapi-starter 2.8.5 → 2.8.16
- Migrated String.format(...) → "...".formatted(...) (19 occurrences, 7 files)

Fixed deprecations surfaced by Spring Boot 3.5 / Spring Security 6.5:
- Replaced AntPathRequestMatcher with PathPatternRequestMatcher across all services
- Suppressed intentional NoOpPasswordEncoder usage in PasswordEncoderIT

Upgrade spotless eclipse formater 4.26 → 4.35

Removed maven-surefire-junit5-tree-reporter (incompatible with SB 3.5.x)