@@ -83,7 +83,7 @@ public class CredentialsAuthenticatorAdapter implements CredentialsAuthenticator
 
             return buildUserAuthentication(authenticationToken);
         } catch (Exception e) {
-            var message = String.format("Authentication failed due to: %s", e.getMessage());
+            var message = "Authentication failed due to: %s".formatted(e.getMessage());
             logger.warn("[CREDENTIALS_AUTH] {}", message, e);
             throw new BadCredentialsException(message, e);
         }
